feature: Mas trabajo con la IA